# EmbedPython

./: CMakeLists.txt
Client/: CMakeLists.txt  PythonClient.cpp  PythonClient.h  PythonResult.cpp  PythonResult.h  ServerController.cpp  ServerController.h  encryption.cpp  encryption.h  global.h
Executer/: CMakeLists.txt  main.cpp  server.cpp  server.h
Test/: CMakeLists.txt  test.cpp
Test/Test/: ClientTest.cpp  Python.cpp  PythonEdgeCases.cpp  PythonForLinux.cpp  PythonForWin.cpp  PythonPackages.cpp  PythonVirtualEnv.cpp  TestQObject.h
translations/: app_jv.ts  app_mr.ts  app_te.ts
